# NCBI FASTA Downloader Distribution Configuration
# Configuración de Distribución del Descargador NCBI FASTA

[metadata]
name = ncbi-fasta-downloader
version = 2.0.0
author = Simon Marino
author_email = marinoperea98@usal.es
description = High-performance NCBI FASTA sequence downloader with batch processing and intelligent rate limiting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SimonAirInsti/ncbi-fasta-downloader
project_urls =
    Bug Reports = https://github.com/SimonAirInsti/ncbi-fasta-downloader/issues
    Source = https://github.com/SimonAirInsti/ncbi-fasta-downloader
    Documentation = https://github.com/SimonAirInsti/ncbi-fasta-downloader/wiki
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Database
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
keywords = ncbi, fasta, bioinformatics, protein, sequences, download, batch, parallel

[options]
py_modules = 
    ncbi_downloader
    setup
    check_progress
python_requires = >=3.8
install_requires =
    biopython>=1.79
    requests>=2.28.0
    colorama>=0.4.4

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    flake8>=5.0
    black>=22.0
    bandit>=1.7
    safety>=2.0
test =
    pytest>=7.0
    pytest-cov>=4.0
    pytest-mock>=3.8

[options.entry_points]
console_scripts =
    ncbi-downloader = ncbi_downloader:main
    ncbi-setup = setup:main
    ncbi-progress = check_progress:main

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    venv,
    .env

[tool:pytest]
testpaths = test_suite.py
python_files = test_*.py
python_functions = test_*
addopts = -v --cov=. --cov-report=term-missing

[coverage:run]
source = .
omit = 
    test_*
    setup.py
    */__pycache__/*
    .venv/*
    venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod
